Fix cta width on mobile.

--- a/src/css/inc/basics.styl
+++ b/src/css/inc/basics.styl
@@ -220,14 +220,23 @@ footer
       background #DEDEDE
     fieldset
       margin 0
+      padding 0 .5rem
       position: relative;
       display: block;
       margin: 0 auto;
       height: 100px;
       width: 340px;
     legend
-      margin-bottom .5rem
+      margin-bottom .25rem
+    input[type='email']
+      width auto
+      min-width 100px
+      width 65%
+    .btn
+      left 65%
+      min-width 100px
 
+    
 
   footer
     display none
